terraform/manifests/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: default

spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.siddhomelab.cc"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ${tls_secret_name}
            namespace: ${secret_namespace}
      allowedRoutes:
        namespaces:
          from: All
